# Radiometric-Geometric-Correction

./: README.md
Geometric/EUCM, UCM y Mei/: CMakeLists.txt
Geometric/EUCM, UCM y Mei/data/: calib_example.json
Geometric/EUCM, UCM y Mei/include/: eigen.h  ocv.h
Geometric/EUCM, UCM y Mei/include/reconstruction/: eucm_motion_stereo.h
Geometric/EUCM, UCM y Mei/parametros_distorsion/eucm/: params_errores_eucm_calibracion.txt
Geometric/EUCM, UCM y Mei/parametros_distorsion/mei/: params_errores_mei_calibracion.txt
Geometric/EUCM, UCM y Mei/parametros_distorsion/ucm/: params_errores_ucm_calibracion.txt
Geometric/EUCM, UCM y Mei/src/calibration/: odometry_cost_function.cpp  unified_calibration.cpp
Geometric/EUCM, UCM y Mei/test/calibration/: rectify_no_inter.cpp  rectify_ucm_mei.cpp
Geometric/EUCM, UCM y Mei/test/reconstruction/: stereo_flow_test.cpp
Geometric/K-B OpenCV/: calibrar.py  corregir.py
Geometric/K-B OpenCV/seleccionadas_opencv_140/: resultados_seleccionadas_opencv.txt
Geometric/K-B OpenCV/seleccionadas_opencv_180/: resultados_seleccionadas_opencv_180.txt
Geometric/Scaramuzza/pyocamcalib/checkpoints/calibration/: calibration_SCARAMUZZA-selected-180.json  calibration_SCARAMUZZA-selected.json
Geometric/Scaramuzza/pyocamcalib/checkpoints/calibration_140/: calibration_2050cm_combinadas.json  calibration_2050cm_inclinadas.json  calibration_2050cm_rectas.json  calibration_20cm_combinadas.json  calibration_20cm_inclinadas.json  calibration_20cm_rectas.json  calibration_50cm_combinadas.json  calibration_50cm_inclinadas.json  calibration_50cm_rectas.json
Geometric/Scaramuzza/pyocamcalib/checkpoints/calibration_180/: calibration_2050cm_combinadas.json  calibration_2050cm_inclinadas.json  calibration_2050cm_rectas.json  calibration_20cm_combinadas.json  calibration_20cm_inclinadas.json  calibration_20cm_rectas.json  calibration_50cm_combinadas.json  calibration_50cm_inclinadas.json  calibration_50cm_rectas.json
Geometric/Scaramuzza/pyocamcalib/checkpoints/calibration_sinteticas/: calibration_dataset_1_scale0.25.json  calibration_dataset_1_scale1.0.json  calibration_dataset_1_scale10.0.json  calibration_dataset_1_scale2.0.json  calibration_dataset_1_scale5.0.json  calibration_dataset_2_scale0.25.json  calibration_dataset_2_scale1.0.json  calibration_dataset_2_scale10.0.json  calibration_dataset_2_scale2.0.json  calibration_dataset_2_scale5.0.json  calibration_dataset_3_scale0.25.json  calibration_dataset_3_scale1.0.json  calibration_dataset_3_scale10.0.json  calibration_dataset_3_scale2.0.json  calibration_dataset_3_scale5.0.json  calibration_dataset_4_scale0.25.json  calibration_dataset_4_scale1.0.json  calibration_dataset_4_scale10.0.json  calibration_dataset_4_scale2.0.json  calibration_dataset_4_scale5.0.json  calibration_dataset_5_scale0.25.json  calibration_dataset_5_scale1.0.json  calibration_dataset_5_scale10.0.json  calibration_dataset_5_scale2.0.json  calibration_dataset_5_scale5.0.json  calibration_dataset_6_scale0.25.json  calibration_dataset_6_scale1.0.json  calibration_dataset_6_scale10.0.json  calibration_dataset_6_scale2.0.json  calibration_dataset_6_scale5.0.json  calibration_fisheye_1_19052025_135603.json
Geometric/Scaramuzza/pyocamcalib/checkpoints/corners_detection/: detections_2050_combinadas_02062025_112638.pickle  detections_2050cm_combinadas_02062025_112832.pickle  detections_2050cm_combinadas_30052025_144930.pickle  detections_2050cm_inclinadas_02062025_113102.pickle  detections_2050cm_inclinadas_30052025_145119.pickle  detections_2050cm_rectas_02062025_113303.pickle  detections_2050cm_rectas_30052025_145300.pickle  detections_20cm_combinadas_02062025_113507.pickle  detections_20cm_combinadas_30052025_145504.pickle  detections_20cm_inclinadas_02062025_113701.pickle  detections_20cm_inclinadas_30052025_145657.pickle  detections_20cm_rectas_02062025_113915.pickle  detections_20cm_rectas_30052025_145832.pickle  detections_50cm_combinadas_02062025_114128.pickle  detections_50cm_combinadas_02062025_153109.pickle  detections_50cm_combinadas_30052025_150025.pickle  detections_50cm_inclinadas_02062025_114336.pickle  detections_50cm_inclinadas_30052025_150155.pickle  detections_50cm_rectas_02062025_114605.pickle  detections_50cm_rectas_30052025_150418.pickle  detections_EUCM-selected_02062025_161712.pickle  detections_SCARAMUZZA-selected-180_03062025_120005.pickle  detections_SCARAMUZZA-selected_02062025_161829.pickle  detections_dataset_1_scale0.25_19052025_164352.pickle  detections_dataset_1_scale1.0_20052025_110511.pickle  detections_dataset_1_scale10.0_19052025_165240.pickle  detections_dataset_1_scale2.0_19052025_175603.pickle  detections_dataset_1_scale5.0_20052025_110834.pickle  detections_dataset_2_scale0.25_19052025_165431.pickle  detections_dataset_2_scale1.0_20052025_111335.pickle  detections_dataset_2_scale10.0_19052025_170208.pickle  (+23 more)
Geometric/Scaramuzza/pyocamcalib/modelling/: calibration.py  utils.py
Geometric/Scaramuzza/pyocamcalib/script/: calibration_script.py  projection_conversion_script.py
HDR/: debevec.py  main.py  mitsunaga.py  robertson.py  tone_mapping.py  utils.py
HDR/Images/140/nublado1/: captura_log.txt  image_list.txt
HDR/Images/140/nublado2a/: captura_log.txt  image_list.txt
HDR/Images/140/semi1a/: captura_log.txt  image_list.txt
HDR/Images/140/semi2/: captura_log.txt  image_list.txt
HDR/Images/140/semi4/: image_list.txt
HDR/Images/140/soleado2/: captura_log.txt
HDR/Images/180/nublado1/: captura_log.txt
HDR/Images/180/semi5a/: image_list.txt
HDR/Images/180/soleado2/: captura_log.txt  image_list.txt
HDR/Images/180/soleado3/: captura_log.txt
HDR/Images/i_2.1/: image_list.txt  output_d.hdr  output_m.hdr  output_r.hdr
HDR/Images/img_ref/: output_d.hdr  output_m.hdr  output_r.hdr
Vignetting/Gao/: CMakeLists.txt
Vignetting/Gao/src/: vignetting_calib.cc  vignetting_test.cc
Vignetting/Gao/src/vignetting/: vignetting.cpp
Vignetting/Lopez-Fuentes/: Vignetting_Correction_color.cpp
Vignetting/Zheng/: ColorCorrection.cpp  ColorCorrection.hpp  Matrix.cpp  Matrix.h  Vig_Correction.cpp
(+1 files in other folders)
